Fixed the Gap bug

--- a/home/style.css
+++ b/home/style.css
@@ -706,7 +706,7 @@ button {
     margin-top: 3rem;
   }
   .serviceBox {
-    /* margin-top: 3rem; */
+    margin-top: 1rem;
     width: 40rem;
     padding: 2rem;
     background-color: #f9f9f9;
@@ -895,6 +895,9 @@ button {
     display: flex;
     gap: 2rem;
     color: #5236ff;
+  }
+  .btnss a {
+    margin-right: 3rem;
   }
 
   .footerContent {
